# tree-sitter-mdx

./: Cargo.toml  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: example.mdx
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: headings.txt  imports.txt  jsx.txt
