[package]
name = "tree-sitter-mdx"
description = "mdx grammar for the tree-sitter parsing library"
version = "0.0.1"
authors = [
  "Javier López Úbeda <jlopezcur@gmail.com>",
]
keywords = ["incremental", "parsing", "mdx"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jlopezcur/tree-sitter-mdx"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
